<resources>
    <string name="app_name">SoftEdgeNepalSchool</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Home">Home</string>
    <string name="Others">Others</string>
    <string name="Student">Student</string>
    <string name="Teacher">Teacher</string>
    <string name="School">School</string>

    <string name="Loading">Please wait....</string>
    <string name="Network_error">Please check your network connection and try again!</string>

    <!-- Login -->
    <string name="Username_or_Email">Username or Email</string>
    <string name="Password">Password</string>
    <string name="QR">QR</string>
    <string name="Login">Login</string>
    <string name="username_error">Please type username</string>
    <string name="password_error">Please type password</string>
    <string name="loading_sign_in">Sign in....</string>
    <string name="login_success">Successfully Login.</string>
    <string name="login_failed">Login Failed.</string>

    <!--Profile-->
    <string name="profile_username">Name: </string>
    <string name="profile_class">Class: </string>
    <string name="profile_rollno">Roll No.: </string>
    <string name="profile_noSiblling">You have no sibling.</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="parent_detail">Parent Detail</string>
    <string name="guardian_deatil">Guardian Detail</string>

    <!--
        For Navigation menu
    -->
    <!-- For all (School, Teacher and Student) -->
    <string name="Event">Event</string>
    <string name="Gallery">Gallery</string>
    <string name="Videos">Videos</string>
    <string name="About">About</string>
    <string name="Setting">Settings</string>

    <!-- For Teacher -->
    <string name="AssignHomeWork">Homework</string>
    <string name="TeacherAttendance">Attendance</string>
    <string name="ClassRoutine">Class Routine</string>
    <string name="ExamRoutine">Routine</string>
    <string name="ResultReportCard">Report Card</string>
    <string name="SalaryAccount">Account</string>
    <string name="TeacherLeaveApplication">Application</string>
    <string name="TeacherSuggestion">Suggestion</string>
    <string name="TeacherProfile">Profile</string>

    <!-- For Student -->
    <string name="HomeWork">Homework</string>
    <string name="StudentAttendance">Attendance</string>
    <string name="Routine">Routine</string>
    <string name="ReportCard">Report Card</string>
    <string name="StudentAccount">Account</string>
    <string name="StudentLeaveApplication">Application</string>
    <string name="StudentSuggestion">Suggestion</string>
    <!--<string name="BusRoute">Bus Route</string>    &lt;!&ndash; for particular role &ndash;&gt;-->
    <string name="LiveBusTracking">Bus Tracking</string>
    <string name="StudentProfile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For menu -->
    <string name="Sibling">Sibling</string>
    <string name="AddUser">Add User</string>
    <string name="Logout">Logout</string>

    <string name="Notification">Notification</string>
    <string name="Notification_setting_message">You can set up your Application to get notifications, like homework reminders, attendance, events, holidays etc.</string>
    <string name="Base_URL">Base URL</string>
    <string name="Youtube_URL">Youtube URL</string>

    <!-- TODO: For Leave Application -->
    <string name="ShowAllLeaveApplication_ToolBar">Your Leave Application</string>
    <string name="ShowAllDetailLeaveApplication_ToolBar">Leave Application Detail</string>
    <string name="LeaveApplication_Dialoge_Title">Cancel your Leave Application?</string>
    <string name="LeaveApplication_Dialoge_Body">Press yes to cancel your leave application.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: For Calender -->
    <string name="Calender">Calender</string>
    <string name="less_than">〈</string>
    <string name="greater_than">〉</string>
    <string name="Holidays_and_Events">Holidays and Events</string>
    <string name="Created_Date">Created Date</string>
    <string name="Deadline">Deadline</string>

    <!-- Assignments -->
    <string name="Faculty">Faculty</string>
    <string name="Class">Class</string>
    <string name="not_any_assignment">There is not any assignment.</string>
    <string name="Today">Today</string>
    <string name="Assignment_Date">Date : </string>
    <string name="AssignTechHomework">Learn and write, page no. 123 Q.no 10, 11 and 12</string>
    <string name="ShowHomework">Homework lists.</string>

    <!--Download -->
    <string name="Download">Download</string>
    <string name="Downloading">Downloading</string>
    <string name="Download_started">download started.</string>
    <string name="Download_Completed">Download Completed</string>

    <!-- Attendance -->
    <string name="Total_Attendance">Total Attendance</string>
    <string name="Present_Percentage">Present Percentage</string>
    <string name="Present_Today">Present Today</string>
    <string name="Working_Days">Working Days</string>
    <string name="Present_Days">Present Days</string>

    <!-- Routine -->
    <string name="Examination">Examination</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Routine_Subject">Subject</string>
    <string name="Routine_Exam_date">Exam Date</string>
    <string name="Routine_Start_Time">Start Time</string>
    <string name="Routine_End_Time">End Time</string>

    <!-- TODO: Mapbox -->
    <string name="mapbox_access_token">pk.eyJ1Ijoic29mdGVkZ2VuZXBhbCIsImEiOiJjanh4Mmc5cWQwMzFtM3BxbjAwdTE1NXUyIn0.j4-OvyW9hUFSCBMYPuVNng</string>
    <string name="RouteName">Route : </string>

    <string name="msg_subscribed">subscribed </string>
    <string name="msg_subscribe_failed">subscribe failed </string>
    <string name="loading">Loading...</string>
    <string name="CreatelevApp">Create your Leave Application</string>

    <!-- ReportCard -->
    <string name="ReportCard_comeOnline">Please come online to get routine.</string>
    <string name="sn">S. N.</string>
    <string name="Theory">Theory</string>
    <string name="Practical">Practical</string>
    <string name="Total">Total</string>
    <string name="FM">F.M.</string>
    <string name="PM">P.M.</string>
    <string name="OM">O.M.</string>
    <string name="Position">Position</string>
    <string name="Result">Result</string>
    <string name="Grade_Obtained">Grade Obtained</string>
    <string name="Final_Grade">Final Grade</string>
    <string name="Grade_Point">Grade Point</string>
    <string name="Avg_Grade_Point">Avg. Grade Point</string>
    <string name="Remarks">Remarks.</string>

    <!-- Report Card Marks View:: flag = percentage, gpa or both -->
    <string name="percentage">Percentage</string>
    <string name="gpa">GPA</string>
    <string name="grade">Grade</string>
    <string name="both">Both</string>

    <!-- Leave Application -->
    <string name="CreateLeaveApplication">Create Leave Application</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="FromDate">Date From</string>
    <string name="ToDate">Date To</string>
    <string name="HalfDate">Half day leave</string>
    <string name="NeedHalfDayLeave">Do you need half day leave.</string>
    <string name="LeaveType">Leave Type</string>
    <string name="Subject">Subject</string>
    <string name="Days">Days</string>
    <string name="Message">Messages</string>
    <string name="Application_test_Subject">Sick leave</string>
    <string name="Application_test_Message">I am writing this letter to inform you that I need to take a sick leave from work due to a severe throat infection. I will need to remain off of work until September 26, bringing my total sick leave to two full weeks......</string>
    <string name="Application_select_startDate">First select start date.</string>
    <string name="Application_select_endDate">You should pick today date or future date.</string>
    <string name="Application_Subject_error">What is your subject for leave?</string>
    <string name="Application_Date_error">Please select date for leave.</string>
    <string name="Application_Message_error">Please type message for leave.</string>

    <!-- Bus Route -->
    <string name="BusRoute_online">Please come online to view live bus tracking.</string>

    <!-- Setting Activity-->
    <string name="language_title">Language</string>
    <string name="language_type">EN</string>
    <string name="Saved">Saved</string>

    <string name="close">Close</string>
</resources>
