<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_for_teacher"
        android:visible="false">
        <item
            android:title="@string/AssignHomeWork"
            android:id="@+id/assignHomeWork"/>
        <item
            android:title="@string/TeacherAttendance"
            android:id="@+id/teacherAttendance"/>
        <item
            android:title="@string/ClassRoutine"
            android:id="@+id/classRoutine"/>
        <item
            android:title="@string/ExamRoutine"
            android:id="@+id/examRoutine"/>
        <item
            android:title="@string/ResultReportCard"
            android:id="@+id/resultReportCard"/>
        <item
            android:title="@string/SalaryAccount"
            android:id="@+id/salaryAccount"/>
        <item
            android:title="@string/TeacherLeaveApplication"
            android:id="@+id/teacherLeaveApplication"/>
        <item
            android:title="@string/TeacherSuggestion"
            android:id="@+id/teacherSuggestion"/>
        <item
            android:title="@string/TeacherProfile"
            android:id="@+id/teacherProfile"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_for_student"
        android:visible="false">
        <item
            android:title="@string/HomeWork"
            android:id="@+id/homeWork"/>
        <item
            android:title="@string/StudentAttendance"
            android:id="@+id/studentAttendance"/>
        <item
            android:title="@string/Routine"
            android:id="@+id/routine"/>
        <item
            android:title="@string/ReportCard"
            android:id="@+id/reportCard"/>
        <item
            android:title="@string/StudentAccount"
            android:id="@+id/studentAccount"/>
        <item
            android:title="@string/StudentLeaveApplication"
            android:id="@+id/studentLeaveApplication"/>
        <item
            android:title="@string/Assignment"
            android:id="@+id/assignment"/>
        <item
            android:title="@string/StudentSuggestion"
            android:id="@+id/studentSuggestion"/>
        <!--<item-->
            <!--android:title="@string/BusRoute"-->
            <!--android:id="@+id/busRoute"/>-->
        <item
            android:title="@string/LiveBusTracking"
            android:id="@+id/liveBusTracking"/>
        <item
            android:title="@string/StudentProfile"
            android:id="@+id/studentProfile"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_for_all"
        android:visible="true">
        <item
            android:title="@string/Event"
            android:id="@+id/event"/>
        <item
            android:title="@string/Blog"
            android:id="@+id/blog"/>
        <item
            android:title="@string/Gallery"
            android:id="@+id/gallery"/>
        <item
            android:title="@string/Videos"
            android:id="@+id/videos"/>
        <item
            android:title="@string/About"
            android:id="@+id/about"/>
        <item
            android:title="@string/Setting"
            android:id="@+id/setting"/>
    </group>
</menu>