<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_for_student"
        android:visible="true">
        <item
            android:id="@+id/sibling"
            android:icon="@drawable/sibling"
            android:title="@string/Sibling"
            app:showAsAction="always" />
    </group>
    <item
        android:id="@+id/addUser"
        android:tint="@color/white"
        android:visible="false"
        android:title="@string/AddUser" />
    <item
        android:id="@+id/logout"
        android:tint="@color/white"
        android:visible="false"
        android:title="@string/Logout" />
    <item
        android:id="@+id/login"
        android:tint="@color/white"
        android:title="@string/Login"
        android:visible="false" />
</menu>