<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/dp42"
                android:layout_height="@dimen/dp42"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:background="@android:color/transparent"
                android:padding="@dimen/vvsmall"
                android:scaleType="centerInside"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_report" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:text="@string/ReportCard"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/dp42">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green_500"
                android:text="@string/percentage" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green_500"
                android:text="@string/gpa" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green_500"
                android:checked="true"
                android:text="@string/both" />
        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>