<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@color/grey_40" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />

        <TextView
            android:id="@+id/recyclerClassRoutineSN"
            android:layout_weight="0.152"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />
        <TextView
            android:id="@+id/recyclerClassRoutineFaculty"
            android:layout_weight="0.142"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Faculty"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />
        <TextView
            android:id="@+id/recyclerClassRoutineClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.142"
            android:text="@string/Class"
            android:paddingLeft="8dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />

        <TextView
            android:id="@+id/recyclerClassRoutineSubject"
            android:layout_weight="0.138"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Subject"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />

        <TextView
            android:id="@+id/recyclerClassRoutineTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.142"
            android:text="Time"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />
        <TextView
            android:id="@+id/recyclerClassRoutineShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.142"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Shift"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />
        <TextView
            android:id="@+id/recyclerClassRoutineDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.142"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Day"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryText" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_40" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_40" />
</LinearLayout>