<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_40" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/percentage"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
            <TextView
                android:id="@+id/repordCardPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorPrimaryText"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/Position"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
            <TextView
                android:id="@+id/repordCardPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorPrimaryText"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/Result"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
            <TextView
                android:id="@+id/repordCardResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorPrimaryText"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_40" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_40" />
    </LinearLayout>
</LinearLayout>